# mathwords

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TECHNICAL_SUMMARY.md  example.py  pyproject.toml  pytest.ini
arxiv_test/: ATTENTION_PAPER_TEST_REPORT.md  README.md  demo_attention_formulas.py  test_attention_paper.py  test_results_full.txt
python/mathwords/: __init__.py  __init__.pyi
src/: lib.rs
tests/: test_mathwords.py
