[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mathwords"
version = "0.1.0"
description = "High-performance Python library for converting LaTeX and MathML to verbalized English text"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Stefan", email = "stefan@example.com" }
]
keywords = ["math", "latex", "mathml", "speech", "accessibility", "verbalization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

[project.urls]
Homepage = "https://github.com/yourusername/mathwords"
Repository = "https://github.com/yourusername/mathwords"
Issues = "https://github.com/yourusername/mathwords/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "mathwords"
python-source = "python"
# Include the Rules directory in the wheel
include = ["Rules/**/*"]

[tool.poetry]
name = "mathwords"
version = "0.1.0"
description = "High-performance Python library for converting LaTeX and MathML to verbalized English text"
authors = ["Stefan <stefan@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
maturin = "^1.0"
pytest = "^7.0"
